# sv2-apps

./: CONTRIBUTING.md  README.md  RELEASE.md
.github/workflows/: ci.yaml  coverage.yaml  integration-test-reusable.yaml  integration-tests.yaml  lockfiles.yaml  msrv.yaml  semver-check.yaml
miner-apps/: Cargo.toml
miner-apps/jd-client/: Cargo.toml
miner-apps/test-utils/mining-device/: Cargo.toml
miner-apps/test-utils/mining-device-sv1/: Cargo.toml
miner-apps/translator/: Cargo.toml
pool-apps/: Cargo.toml
pool-apps/jd-server/: Cargo.toml
pool-apps/pool/: Cargo.toml
scripts/: README.md  build-all-workspaces.sh  clippy-fmt-and-test.sh  coverage-apps.sh  publish-apps.sh
test/integration-tests/: Cargo.toml
