[package]
name = "integration_tests_sv2"
version = "0.1.0"
authors = ["The Stratum V2 Developers"]
edition = "2021"
documentation = "https://github.com/stratum-mining/stratum"
readme = "README.md"
homepage = "https://stratumprotocol.org"
repository = "https://github.com/stratum-mining/stratum"
license = "MIT OR Apache-2.0"
keywords = ["stratum", "mining", "bitcoin", "protocol"]

[dependencies]
async-channel = { version = "1.5.1", default-features = false }
corepc-node = { version = "0.7.0", default-features = false, features = ["28_0"] }
flate2 = { version = "1.1.0", default-features = false, features = ["rust_backend"] }
minreq = { version = "2.12.0", default-features = false, features = ["https"] }
once_cell = { version = "1.19.0", default-features = false }
rand = { version = "0.9.0", default-features = false, features = ["thread_rng"] }
tar = { version = "0.4.41", default-features = false }
tokio = { version="1.44.1", default-features = false,  features = ["tracing"] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
# TODO: use crates.io as soon as new versions are gonna be published
stratum-common = { git = "https://github.com/stratum-mining/stratum", branch = "main", features = ["with_network_helpers", "sv1"]}
sv1_api = { git = "https://github.com/stratum-mining/stratum", branch = "main", optional = true }
config_helpers_sv2 = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
key-utils = { git = "https://github.com/stratum-mining/stratum", branch = "main" }
# Applications
pool_sv2 = { path = "../../pool-apps/pool" }
jd_server = { path = "../../pool-apps/jd-server" }
jd_client = { path = "../../miner-apps/jd-client" }
translator_sv2 = { path = "../../miner-apps/translator" }
mining_device = { path = "../../miner-apps/test-utils/mining-device" }
mining_device_sv1 = { path = "../../miner-apps/test-utils/mining-device-sv1" }

[lib]
path = "lib/mod.rs"

[features]
default = []
sv1 = ["sv1_api", "stratum-common/sv1"]
